fix: 「解す」の誤検知を修正 (#325)
* fix: 「解す」の誤検知を修正

* spec追加

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -1280,7 +1280,7 @@ rules:
         to: 改めて
   - expected: ほぐ$1
     pattern:
-      - /(?<![正分理])解([さしすせそ])/
+      - /(?<![正分理読])解([さしすせそ])/
     prh: >-
       平仮名にしたほうが読みやすい漢字は平仮名にする
       https://smarthr.design/products/writing/idiomatic-usage/usage/
@@ -1295,6 +1295,14 @@ rules:
         to: ほぐせば
       - from: 解そう
         to: ほぐそう
+      - from: 正解
+        to: 正解
+      - from: 分解
+        to: 分解
+      - from: 理解
+        to: 理解
+      - from: 読解
+        to: 読解
   - expected: 手引き
     pattern:
       - /手引(?!き)/
