--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "textlint-tester": "^13.3.2",
     "textlint-scripts": "^13.3.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "textlint": "^13.3.2"
   },
   "dependencies": {
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.9",
