[create-pull-request] automated change

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -1413,3 +1413,14 @@ rules:
         to: 健康保険組合
       - from: 組合健保
         to: 健康保険組合
+  - expected: サンプル
+    pattern:
+      - ダミー
+    prh: 「サンプル」と表記し、「ダミー」は使用しない
+    specs:
+      - from: ダミー
+        to: サンプル
+      - from: ダミーデータ
+        to: サンプルデータ
+      - from: ダミーテキスト
+        to: サンプルテキスト
