--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "build": "textlint-scripts build",
     "prepublishOnly": "npm run --if-present build",
     "release": "standard-version",
-    "release:dryrun": "standard-version --dry-run",
-    "export:airtable": "ts-node ./scripts/export-airtable-rules.ts"
+    "release:dryrun": "standard-version --dry-run"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
@@ -33,18 +32,17 @@
     "@textlint/types": "^14.3.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^18.19.59",
-    "airtable": "^0.12.2",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "husky": "^9.1.6",
     "js-yaml": "^4.1.0",
     "prettier": "^3.3.3",
     "standard-version": "^9.3.2",
-    "textlint-tester": "^14.3.0",
+    "textlint": "^14.3.0",
     "textlint-scripts": "^14.3.0",
+    "textlint-tester": "^14.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "textlint": "^14.3.0"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^2.0.3",
