--- a/.github/workflows/startRelease.yml
+++ b/.github/workflows/startRelease.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
+      - uses: pnpm/action-setup@v4
       - name: git config
         run: |
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -39,13 +40,13 @@ jobs:
           BASE_TAG=v$(npx -c 'echo "$npm_package_version"')
           git checkout $BASE_TAG
           git merge --no-edit ${{ github.ref }}
-      - run: yarn install --frozen-lockfile
+      - run: pnpm install --frozen-lockfile
       - name: release dry run
         if: ${{ env.IS_PRERELEASE == 'false' }}
-        run: yarn release:dryrun > ${{ env.RESULT_PATH }}
+        run: pnpm release:dryrun > ${{ env.RESULT_PATH }}
       - name: prerelease dry run
         if: ${{ env.IS_PRERELEASE == 'true' }}
-        run: yarn release:dryrun --prerelease > ${{ env.RESULT_PATH }}
+        run: pnpm release:dryrun --prerelease > ${{ env.RESULT_PATH }}
       - name: wrap dry run log
         run: |
           echo "Dry Run Log:
