--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["local>kufu/renovate-config"],
   "npm": {
-    "postUpdateOptions": ["yarnDedupeHighest"],
+    "postUpdateOptions": ["pnpmDedupe"],
     "packageRules": [
       {
         "groupName": "textlint rules",
