--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-# use yarn
+# use pnpm
 package-lock.json
 
 # env
