漢字をひらく

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -1529,5 +1529,5 @@ rules:
     specs:
       - from: どうしましょうか？早急に決定が必要です。
         to: どうしましょうか？　早急に決定が必要です。
-      - from: "# Q. データを取り込めますか？取り込み方を教えて下さい。"
-        to: "# Q. データを取り込めますか？取り込み方を教えて下さい。"
+      - from: "# Q. データを取り込めますか？取り込み方を教えてください。"
+        to: "# Q. データを取り込めますか？取り込み方を教えてください。"
