--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -1529,5 +1529,11 @@ rules:
     specs:
       - from: どうしましょうか？早急に決定が必要です。
         to: どうしましょうか？　早急に決定が必要です。
-      - from: "# Q. データを取り込めますか？取り込み方を教えてください。"
-        to: "# Q. データを取り込めますか？取り込み方を教えてください。"
+      - from: "# データを取り込めますか？取り込み方を教えてください。"
+        to: "# データを取り込めますか？取り込み方を教えてください。"
+      - from: "Q. データを取り込めますか？取り込み方を教えてください。"
+        to: "Q. データを取り込めますか？取り込み方を教えてください。"
+      - from: "「取り込みを始めますか？」または［取り込みを始めますか？］を押してください。"
+        to: "「取り込みを始めますか？」または［取り込みを始めますか？］を押してください。"
+      - from: "「完了！」または［完了！］を押してください。"
+        to: "「完了！」または［完了！］を押してください。"
