feat: 「？」「！」のあとに全角スペースがない文章を検出する (#621)
* Update prh-idiomatic-usage.yml

* piyoさんのFBを反映

* 漢字をひらく

* specsを追加

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -1520,3 +1520,20 @@ rules:
     specs:
       - from: ボタンを押下した
         to: ボタンを押した
+  - expected: "$1　$2"
+    pattern:
+      - /(?<!^[#Q][^？！]+)(?!.*[］」])([？！])([^　])/
+    prh: >-
+      全角記号「？」と「！」の後に全角スペースを入れる
+      https://smarthr.design/products/contents/idiomatic-usage/symbol/#h2-5
+    specs:
+      - from: どうしましょうか？早急に決定が必要です。
+        to: どうしましょうか？　早急に決定が必要です。
+      - from: "# データを取り込めますか？取り込み方を教えてください。"
+        to: "# データを取り込めますか？取り込み方を教えてください。"
+      - from: "Q. データを取り込めますか？取り込み方を教えてください。"
+        to: "Q. データを取り込めますか？取り込み方を教えてください。"
+      - from: "「取り込みを始めますか？」または［取り込みを始めますか？］を押してください。"
+        to: "「取り込みを始めますか？」または［取り込みを始めますか？］を押してください。"
+      - from: "「完了！」または［完了！］を押してください。"
+        to: "「完了！」または［完了！］を押してください。"
