fix: 全角の「？」と「！」のあとに、`"`または`"`が続く場合も許容する (#631)
* fix: 全角の「？」と「！」のあとに、`"`または`"`が続く場合も許容する

* fix: 正規表現の意図をわかりやすくする

Co-authored-by: alpaca-tc <alpaca-tc@alpaca.tc>

---------

Co-authored-by: alpaca-tc <alpaca-tc@alpaca.tc>

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -890,7 +890,7 @@ rules:
       - from: 雇用形態マスター
         to: 雇用形態マスター
       - from: 続柄マスター
-        to: 続柄マスター        
+        to: 続柄マスター
       - from: SmartHRマスター
         to: SmartHRマスター
   - expected: マネージャー
@@ -1522,7 +1522,7 @@ rules:
         to: ボタンを押した
   - expected: "$1　$2"
     pattern:
-      - /(?<!^[#Q][^？！]+)(?!.*[］」])([？！])([^　])/
+      - /(?<!^[#Q][^？！]+)(?!.*[］」])([？！])([^　'"])/
     prh: >-
       全角記号「？」と「！」の後に全角スペースを入れる
       https://smarthr.design/products/contents/idiomatic-usage/symbol/#h2-5
@@ -1537,3 +1537,7 @@ rules:
         to: "「取り込みを始めますか？」または［取り込みを始めますか？］を押してください。"
       - from: "「完了！」または［完了！］を押してください。"
         to: "「完了！」または［完了！］を押してください。"
+      - from: "\"どんなことにお困りですか？\""
+        to: "\"どんなことにお困りですか？\""
+      - from: "\"どんなことにお困りですか？具体的に教えて下さい。\""
+        to: "\"どんなことにお困りですか？　具体的に教えて下さい。\""
