正規表現を修正

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -874,8 +874,7 @@ rules:
   - expected: マスターデータ
     pattern:
       - >-
-        /(?<!部署|役職|雇用形態|等級|続柄|評価記号|給与支給形態|］|スキル|資格|研修|カスタム|システム標準|SmartHR
-        ?|ドメイン)マスタ(?!ー)(データ)?/
+        /(?!.*(?:給与支給形態|評価記号|部署|役職|雇用形態|等級|続柄|スキル|資格|研修|カスタム|システム標準|SmartHR|ドメイン))マスタ(?!ー)(データ)?/
     prh: >-
       マスターデータの総称は「マスターデータ」、総称以外は「◯◯マスター」と表記するhttps://smarthr.design/products/contents/idiomatic-usage/usage/
     specs:
