長音なし/ありのルールを統合した
下記をがっちゃんこした。
L874：マスタのとき（長音なし）の時を考慮したVer
L1381：マスター（長音あり）のときを考慮したVer

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -874,7 +874,8 @@ rules:
   - expected: マスターデータ
     pattern:
       - >-
-        /(?!.*(?:給与支給形態|評価記号|部署|役職|雇用形態|等級|続柄|スキル|資格|研修|カスタム|システム標準|SmartHR|ドメイン))マスタ(?!ー)(データ)?/
+        - /(?<!部署|役職|雇用形態|等級|続柄|給与支給形態|評価記号|］|スキル|資格|研修|カスタム|システム標準|SmartHR ?|ドメイン)マスタ(?!ー)(データ)?/
+        - /(?<!部署|役職|雇用形態|等級|続柄|給与支給形態|評価記号|］|スキル|資格|研修|カスタム|システム標準|SmartHR ?|ドメイン)マスター(?!データ)/
     prh: >-
       マスターデータの総称は「マスターデータ」、総称以外は「◯◯マスター」と表記するhttps://smarthr.design/products/contents/idiomatic-usage/usage/
     specs:
@@ -1379,24 +1380,6 @@ rules:
         to: 縦並び
       - from: ならび順
         to: 並び順
-  - expected: マスターデータ
-    pattern:
-      - /(?<!部署|役職|雇用形態|等級|］|スキル|資格|研修|カスタム|システム標準|SmartHR ?|ドメイン)マスター(?!データ)/
-    prh: >-
-      マスターデータの総称は「マスターデータ」、総称以外は「◯◯マスター」と表記するhttps://smarthr.design/products/contents/idiomatic-usage/usage/
-    specs:
-      - from: マスター
-        to: マスターデータ
-      - from: 部署マスター
-        to: 部署マスター
-      - from: 役職マスター
-        to: 役職マスター
-      - from: 等級マスター
-        to: 等級マスター
-      - from: 雇用形態マスター
-        to: 雇用形態マスター
-      - from: SmartHRマスター
-        to: SmartHRマスター
   - expected: 詳し
     pattern:
       - くわし
