--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -1541,3 +1541,23 @@ rules:
         to: "\"どんなことにお困りですか？\""
       - from: "\"どんなことにお困りですか？具体的に教えて下さい。\""
         to: "\"どんなことにお困りですか？　具体的に教えて下さい。\""
+      - from: "どんなことにお困りですか？｜ヘルプセンター"
+        to: "どんなことにお困りですか？｜ヘルプセンター"
+      - from: "[どんなことにお困りですか？]"
+        to: "[どんなことにお困りですか？]"
+      - from: "どんなことにお困りですか？/foo.md"
+        to: "どんなことにお困りですか？/foo.md"
+      - from: "<p>どんなことにお困りですか？</p>"
+        to: "<p>どんなことにお困りですか？</p>"
+      - from: "<p>どんなことにお困りですか？</p>"
+        to: "<p>どんなことにお困りですか？</p>"
+      - from: >-
+          <p>
+            どんなことにお困りですか？
+          </p>
+        to: >-
+          <p>
+            どんなことにお困りですか？
+          </p>
+      - from: "どんなことにお困りですか？\\n"
+        to: "どんなことにお困りですか？\\n"
