fix: 「？」「！」のあとに全角スペースがない文章を検出するルールがJSXファイルで誤検知する (#638)
* fix: JSXファイルで誤検知させない

* test: テストケースを追加

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -1524,7 +1524,7 @@ rules:
         to: ボタンを押した
   - expected: "$1　$2"
     pattern:
-      - /(?<!^[#Q][^？！]+)(?!.*[］」])([？！])([^　'"])/
+      - /(?<!^[#Q][^？！]+)(?!.*[｜\/\]］」])([？！])([^　'"\n<\\n])/
     prh: >-
       全角記号「？」と「！」の後に全角スペースを入れる
       https://smarthr.design/products/contents/idiomatic-usage/symbol/#h2-5
@@ -1543,3 +1543,23 @@ rules:
         to: "\"どんなことにお困りですか？\""
       - from: "\"どんなことにお困りですか？具体的に教えて下さい。\""
         to: "\"どんなことにお困りですか？　具体的に教えて下さい。\""
+      - from: "どんなことにお困りですか？｜ヘルプセンター"
+        to: "どんなことにお困りですか？｜ヘルプセンター"
+      - from: "[どんなことにお困りですか？]"
+        to: "[どんなことにお困りですか？]"
+      - from: "どんなことにお困りですか？/foo.md"
+        to: "どんなことにお困りですか？/foo.md"
+      - from: "<p>どんなことにお困りですか？</p>"
+        to: "<p>どんなことにお困りですか？</p>"
+      - from: "<p>どんなことにお困りですか？</p>"
+        to: "<p>どんなことにお困りですか？</p>"
+      - from: >-
+          <p>
+            どんなことにお困りですか？
+          </p>
+        to: >-
+          <p>
+            どんなことにお困りですか？
+          </p>
+      - from: "どんなことにお困りですか？\\n"
+        to: "どんなことにお困りですか？\\n"
