test: ？と！の直後に`{`が続く場合も許容するテストケースを追加

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -1532,6 +1532,8 @@ rules:
         to: "[どんなことにお困りですか？]"
       - from: "どんなことにお困りですか？/foo.md"
         to: "どんなことにお困りですか？/foo.md"
+      - from: "どんなことにお困りですか？{br}具体的に教えて下さい。"
+        to: "どんなことにお困りですか？{br}具体的に教えて下さい。"
       - from: "<p>どんなことにお困りですか？</p>"
         to: "<p>どんなことにお困りですか？</p>"
       - from: "<p>どんなことにお困りですか？</p>"
