feat: `数字.`のあとは半角スペースを入れる

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -1548,3 +1548,10 @@ rules:
           </p>
       - from: "どんなことにお困りですか？\\n"
         to: "どんなことにお困りですか？\\n"
+  - expected: "$1. $2"
+    pattern: '/([0-9])\.([^\s])/g'
+    prh: >-
+      数字.のあとは半角スペースを入れる（例：1. メールが届く）
+    specs:
+      - from: 1.メールが届く
+        to: 1. メールが届く
