--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -1314,7 +1314,7 @@ rules:
         to: 改めて
   - expected: ほぐ$1
     pattern:
-      - /(?<![正分理読])解([さしすせそ])/
+      - /(?<![正分理読誤])解([さしすせそ])/
     prh: >-
       平仮名にしたほうが読みやすい漢字は平仮名にする
       https://smarthr.design/products/contents/writing-style/
@@ -1337,6 +1337,8 @@ rules:
         to: 理解
       - from: 読解
         to: 読解
+      - from: 誤解
+        to: 誤解
   - expected: 手引き
     pattern:
       - /手引(?!き)/
